# ChangeLog for dev-util/numdiff
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  16 Sep 2014; Christoph Junghans <ottxor@gentoo.org> numdiff-5.8.1.ebuild:
  clean up