@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>sci</herd>
-<maintainer>
-  <email>tamiko+GENTOO@kyomu.43-1.org</email>
-  <name>Matthias Maier</name>
-</maintainer>
-<longdescription>
+  <herd>sci</herd>
+  <maintainer>
+    <email>tamiko+GENTOO@kyomu.43-1.org</email>
+    <name>Matthias Maier</name>
+  </maintainer>
+  <longdescription>
   numdiff is a program that can be used to compare putatively similar files
   line by line and field by field, ignoring small numeric differences
   or/and different numeric formats. Equivalently, numdiff is a program with
