@@ -1,4 +1,4 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
@@ -6,18 +6,17 @@ EAPI=5
 
 inherit autotools-utils eutils multilib
 
-DESCRIPTION="compares putatively similar files, ignoring small numeric differences and formats"
+DESCRIPTION="Compares putatively similar files, ignoring small numeric differences and formats"
 HOMEPAGE="http://www.nongnu.org/numdiff/"
 SRC_URI="http://savannah.nongnu.org/download/numdiff/${P}.tar.gz"
 
-KEYWORDS="~amd64 ~x86 ~amd64-linux ~x86-linux"
-
 LICENSE="GPL-3+"
 SLOT="0"
+KEYWORDS="~amd64 ~x86 ~amd64-linux ~x86-linux"
 IUSE="+nls +gmp"
 
 RDEPEND="
-	gmp? ( dev-libs/gmp )
+	gmp? ( dev-libs/gmp:0 )
 	nls? ( sys-devel/gettext )
 	!dev-util/ndiff"
 
@@ -36,7 +35,7 @@ src_install() {
 	autotools-utils_src_install
 
 	# Remove some empty folders:
-	rm -r "${ED}"/usr/share/locale
+	rm -r "${ED}"/usr/share/locale || die
 
 	#Fix up some wrong installation pathes:
 	mv "${ED}"/usr/share/doc/${P}/{numdiff/numdiff.{html,pdf,txt*},} || die
